--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "dependencies": {
-    "googleapis": "^118.0.0"
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "flag-icon-css": "^4.1.7",
+    "googleapis": "^118.0.0",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "webpack": "^5.82.1",
+    "webpack-cli": "^5.1.1"
   }
 }
