--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/cli": "^7.21.5",
     "@babel/core": "^7.21.8",
+    "axios": "^1.4.0",
     "country-flags-css": "^1.1.2",
     "flag-icon-css": "^4.1.7",
     "googleapis": "^118.0.0",
